display response status code on the collector

--- a/src/Resources/views/Collector/rest_client_sdk.html.twig
+++ b/src/Resources/views/Collector/rest_client_sdk.html.twig
@@ -90,7 +90,15 @@
                         <strong>Took</strong>: {{ (1000 * query.queryTime)|number_format }} ms
                     </div>
                     <div>
-                        <strong>Response</strong>:
+                        <strong>Response status code</strong>:
+                        {% if response.statusCode in [200, 204] %}
+                            <span class="label status-success">{{ response.statusCode }}</span>
+                        {% else %}
+                            <span class="label status-error">{{ response.statusCode }}</span>
+                        {% endif %}
+                    </div>
+                    <div>
+                        <strong>Response body</strong>:
                         <a class="toggle" href="#mapado_rest_client_sdk_{{ key }}" onclick="return toggle(this);" style="text-decoration: none;" title="Toggle response">
                             <img class="mapado_rest_client_sdk_{{key}}" alt="+" src="{{ asset('bundles/framework/images/blue_picto_more.gif') }}" style="display: inline; width: 12px; height: 12px; vertical-align: bottom;" />
                             <img class="mapado_rest_client_sdk_{{key}}" alt="-" src="{{ asset('bundles/framework/images/blue_picto_less.gif') }}" style="display: none; width: 12px; height: 12px; vertical-align: bottom;" />
