--- a/src/Resources/views/Collector/rest_client_sdk.html.twig
+++ b/src/Resources/views/Collector/rest_client_sdk.html.twig
@@ -1,4 +1,4 @@
-{% extends 'WebProfilerBundle:Profiler:layout.html.twig' %}
+{% extends '@WebProfiler/Profiler/layout.html.twig' %}
 
 {% block toolbar %}
     {# le contenu de la barre d'outils de débuggage web #}
@@ -38,7 +38,7 @@
         {% endif %}
     {% endset %}
 
-    {% include 'WebProfilerBundle:Profiler:toolbar_item.html.twig' with { 'link': profiler_url } %}
+    {% include '@WebProfiler/Profiler/toolbar_item.html.twig' with { 'link': profiler_url } %}
 {% endblock %}
 
 {% block head %}
