--- a/src/Resources/views/Collector/rest_client_sdk.html.twig
+++ b/src/Resources/views/Collector/rest_client_sdk.html.twig
@@ -13,8 +13,8 @@
         {% endfor %}
         #}
         {% if collector.historyLogged %}
-            <span class="sf-toolbar-status {{ status }}">{{ collector.requestHistory|length }}</span>
-            {% if collector.requestHistory|length > 0 %}
+            <span class="sf-toolbar-status {{ status }}">{{ collector.nbRequest }}</span>
+            {% if collector.nbRequest > 0 %}
                 <span class="sf-toolbar-info-piece-additional-detail">in {{ (collector.requestTime * 1000)|number_format }} ms</span>
             {% endif %}
         {% endif %}
@@ -29,7 +29,7 @@
         {% else %}
             <div class="sf-toolbar-info-piece">
                 <b>Queries</b>
-                <span>{{ collector.requestHistory|length }}</span>
+                <span>{{ collector.nbRequest }}</span>
             </div>
             <div class="sf-toolbar-info-piece">
                 <b>Query Time</b>
@@ -86,7 +86,7 @@ a.toggle {
         </span>
         <strong>Rest Client Sdk</strong>
         <span class="count">
-            <span>{{ collector.requestHistory|length }}</span>
+            <span>{{ collector.nbRequest }}</span>
             <span>{{ (1000 * collector.requestTime)|number_format }} ms</span>
         </span>
     </span>
@@ -112,75 +112,77 @@ a.toggle {
         <p>
             <em>History not logged.</em>
         </p>
-    {% elseif not collector.requestHistory %}
+    {% elseif collector.nbRequest <= 0 %}
         <p>
             <em>No request.</em>
         </p>
     {% else %}
-        <ul class="alt">
-            {% for key, query in collector.requestHistory %}
-                {% set response = query.response %}
+        {% for sdkName, requestHistory in collector.requestHistory %}
+            <h3>{{sdkName}}</h3>
+            <ul class="alt">
+                {% for  key, query in requestHistory %}
+                    {% set response = query.response %}
 
-                <li  class="{{ cycle(['odd', 'even'], loop.index) }}">
-                    <div style="overflow: auto">
-                        <strong>Path:</strong>
-                        <code>{{ query.method|upper }} {{ query.url }}</code>
-                    </div>
-                    {% if query.parameters %}
+                    <li  class="{{ cycle(['odd', 'even'], loop.index) }}">
+                        <div style="overflow: auto">
+                            <strong>Path:</strong>
+                            <code>{{ query.method|upper }} {{ query.url }}</code>
+                        </div>
+                        {% if query.parameters %}
+                            <div>
+                                <a class="toggle" href="#mapado_rest_client_sdk_params_{{ key }}" onclick="return toggle(this);" title="Toggle parameters">
+                                    <strong>Parameters</strong>
+
+                                    <span class="mapado_rest_client_sdk_params_{{key}}">▶</span>
+                                    <span class="hidden mapado_rest_client_sdk_params_{{key}}">▼</span>
+                                </a>
+                                <div class="hidden mapado_rest_client_sdk_params_{{ key }}">
+                                    {{ highlight.dump(query.parameters, 'json') }}
+                                </div>
+                            </div>
+                        {% endif %}
                         <div>
-                            <strong>Parameters</strong>:
-                            <a class="toggle" href="#mapado_rest_client_sdk_params_{{ key }}" onclick="return toggle(this);" title="Toggle parameters">
-                                <img class="mapado_rest_client_sdk_params_{{key}}" alt="+" src="{{ asset('bundles/framework/images/blue_picto_more.gif') }}" />
-                                <img class="hidden mapado_rest_client_sdk_params_{{key}}" alt="-" src="{{ asset('bundles/framework/images/blue_picto_less.gif') }}" />
-                                <small>Toggle parameters</small>
+                            <strong>Took</strong>: {{ (1000 * query.queryTime)|number_format }} ms
+                        </div>
+                        <div>
+                            <strong>Response status code</strong>:
+                            {% if not response %}
+                                <span class="label status-error">No response</span>
+                            {% elseif response.statusCode >= 400 %}
+                                <span class="label status-error">{{ response.statusCode }}</span>
+                            {% elseif response.statusCode >= 300 %}
+                                <span class="label status-warning">{{ response.statusCode }}</span>
+                            {% else %}
+                                <span class="label status-success">{{ response.statusCode }}</span>
+                            {% endif %}
+                        </div>
+                        <div>
+                            <a class="toggle" href="#mapado_rest_client_sdk_{{ key }}" onclick="return toggle(this);" title="Toggle response">
+                                <strong>Response body</strong>:
+
+                                <span class="mapado_rest_client_sdk_{{key}}">▶</span>
+                                <span class="hidden mapado_rest_client_sdk_{{key}}">▼</span>
                             </a>
-                            <div class="hidden mapado_rest_client_sdk_params_{{ key }}">
-                                {{ highlight.dump(query.parameters, 'json') }}
+
+                            <div class="hidden mapado_rest_client_sdk_{{ key }}">
+                                {{ highlight.dump(query.responseBody, 'json') }}
                             </div>
                         </div>
-                    {% endif %}
-                    <div>
-                        <strong>Took</strong>: {{ (1000 * query.queryTime)|number_format }} ms
-                    </div>
-                    <div>
-                        <strong>Response status code</strong>:
-                        {% if not response %}
-                            <span class="label status-error">No response</span>
-                        {% elseif response.statusCode >= 400 %}
-                            <span class="label status-error">{{ response.statusCode }}</span>
-                        {% elseif response.statusCode >= 300 %}
-                            <span class="label status-warning">{{ response.statusCode }}</span>
-                        {% else %}
-                            <span class="label status-success">{{ response.statusCode }}</span>
-                        {% endif %}
-                    </div>
-                    <div>
-                        <strong>Response body</strong>:
-                        <a class="toggle" href="#mapado_rest_client_sdk_{{ key }}" onclick="return toggle(this);" title="Toggle response">
-                            <img class="mapado_rest_client_sdk_{{key}}" alt="+" src="{{ asset('bundles/framework/images/blue_picto_more.gif') }}" />
-                            <img class="hidden mapado_rest_client_sdk_{{key}}" alt="-" src="{{ asset('bundles/framework/images/blue_picto_less.gif') }}" />
-                            <small>Toggle response</small>
-                        </a>
 
-                        <div class="hidden mapado_rest_client_sdk_{{ key }}">
-                            {{ highlight.dump(query.responseBody, 'json') }}
+                        <div>
+                            <a class="toggle" href="#mapado_rest_client_sdk_trace_{{ key }}" onclick="return toggle(this);" title="Toggle stacktrace">
+                                <strong>Stacktrace</strong>:
+                                <span class="mapado_rest_client_sdk_trace_{{key}}">▶</span>
+                                <span class="hidden mapado_rest_client_sdk_trace_{{key}}">▼</span>
+                            </a>
+
+                            <div class="hidden mapado_rest_client_sdk_trace_{{ key }}">
+                                {{ highlight.dump(query.backtrace, 'json') }}
+                            </div>
                         </div>
-                    </div>
-
-                    <div>
-                        <strong>Stacktrace</strong>:
-                        <a class="toggle" href="#mapado_rest_client_sdk_trace_{{ key }}" onclick="return toggle(this);" title="Toggle stacktrace">
-                            <img class="mapado_rest_client_sdk_trace_{{key}}" alt="+" src="{{ asset('bundles/framework/images/blue_picto_more.gif') }}" />
-                            <img class="hidden mapado_rest_client_sdk_trace_{{key}}" alt="-" src="{{ asset('bundles/framework/images/blue_picto_less.gif') }}" />
-                            <small>Toggle stacktrace</small>
-                        </a>
-
-                        <div class="hidden mapado_rest_client_sdk_trace_{{ key }}">
-                            {{ highlight.dump(query.backtrace, 'json') }}
-                        </div>
-                    </div>
-                </li>
-            {% endfor %}
-        </ul>
+                    </li>
+                {% endfor %}
+            </ul>
+        {% endfor %}
     {% endif %}
 {% endblock %}
